--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -58,7 +58,7 @@ jobs:
 
           # GitHub username to generate the animation for
 
-          github_user_name: ${{ pujakumari1202 }}
+          github_user_name: ${{ Pujakumari1202 }}
 
 
 
